ovn-kubernetes/next-gen-route/route/cafe/insecure/route-coffee.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  namespace: cafe
  labels:
    f5nr: "true"
  name: cafe-coffee
spec:
  host: cafe.example.com
  path: "/coffee"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: coffee-svc
